# skillforge

./: .gitignore  BACKLOG.md  README.md  TODO.md  bd-helper.sh  pyproject.toml
.beads/: beads.jsonl  config.yaml  issues.jsonl  knowledge-work.db
assessments/: ASSESSMENT_SPECS.md  domain-1-quick-start.md  level-1-domain-1-pattern-recognition.md  level-1-domain-2-theoretical-positioning.md  level-1-domain-3-qualitative-mechanism.md  level-1-domain-4-theoretical-framing.md  level-1-domain-5-epistemological-genre.md  level-1-domain-6-adversarial-evidence.md  level-1-domain-7-execution-resilience.md  level-4-capstone-ai-supervision.md  level-4-capstone-build-your-machine.md
assessments/tasks/: level-2-domain-1-contribution-diagnosis.md  level-2-domain-1-task.md  level-2-domain-3-task.md  level-2-domain-4-frame-comparison.md  level-2-domain-5-quant-qual-integration.md  level-3-instructions.md  level-3-reviewer-anticipation.md
cli/: __init__.py  competency_gate.py  evaluator.py  skillforge.py
commands/: unlock-map.json
competencies/: domain-1-pattern-recognition.md  domain-2-theoretical-positioning.md  domain-3-qualitative-mechanism.md  domain-4-theoretical-framing.md  domain-5-epistemological-genre.md  domain-6-adversarial-evidence.md  domain-7-claim-verification.md
design/: BADGE_DESIGN_SPECS.md  BADGE_PROMPTS.md  BADGE_PROMPTS_ICON_ONLY.md  BADGE_VERIFICATION_SPEC.md  add_badge_text.py
docs/: FACULTY_PITCH.md
lib/credentials/: __init__.py  badges.py  issuer.py  paths.py
portfolio-template/: .gitignore  BADGES.md  README.md
portfolio-template/.research-quals/: config.yaml
portfolio-template/.skill-forge/: config.yaml
portfolio-template/capstone/: CAPSTONE_EXERCISE.md  README.md
portfolio-template/domain-1-pattern-recognition/: README.md
portfolio-template/domain-2-theoretical-positioning/: README.md
portfolio-template/domain-3-qualitative-mechanism/: README.md
portfolio-template/domain-3-research-design/: README.md
portfolio-template/domain-4-qualitative-rigor/: README.md
portfolio-template/domain-4-theoretical-framing/: README.md
portfolio-template/domain-5-epistemological-genre/: README.md
portfolio-template/domain-5-literature-synthesis/: README.md
seed-data/: beads_viz.html  beane-surgery-entities.json  beane-surgery-extracted.json
tools/: anonymize_stage1.py  atlasti_parser.py
(+264 files in other folders)
